# convert-reports

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  run-docker.ps1
output_pdfs/: a_r_25_converted.xlsx  a_r_9_converted.xlsx  n_r_10_n_converted.xlsx  n_r_5_n_converted.xlsx
src/: __init__.py  config.py  exceptions.py  factory.py  location_registry.py  models.py  ocr_utils.py
src/detectors/: classifier.py  report_detector.py
src/models/: __init__.py  attendance.py  report_type.py  type_a.py  type_b.py  type_n.py
src/observers/: __init__.py  base_observer.py  logging_observer.py
src/ocr/: __init__.py  pdfplumber_ocr.py  pytesseract_ocr.py
src/parsers/: base_parser.py  parser_factory.py  type_a_parser.py  type_b_parser.py  type_n_parser.py
src/renderers/: base_renderer.py  html_renderer.py  pdf_renderer.py  styles.py  type_a_renderer.py  type_n_renderer.py
src/services/: __init__.py  transformation_service.py
src/strategies/: __init__.py  base_strategy.py  type_a_strategy.py  type_b_strategy.py  validating_strategy_decorator.py
src/transformers/: __init__.py  base_transformer.py  helpers.py  row_strategy.py  transformation_service.py  type_a_transformer.py  type_n_transformer.py  validating_decorator.py
src/validators/: report_validator.py
tests/: conftest.py  test_classifier.py  test_container.py  test_focused.py  test_helpers.py  test_location_registry.py  test_ocr.py  test_parsers.py  test_strategies.py  test_transformation_service.py  test_transformers.py  test_validating_decorator.py
