[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "attendance-report"
version = "0.1.0"
description = "Attendance report PDF converter"
requires-python = ">=3.11"
dependencies = [
    "pytesseract>=0.3.10",
    "pdf2image>=1.17",
    "Pillow>=9.0",
    "numpy>=1.26,<2.0",
    "pdfplumber>=0.11",
    "openpyxl>=3.1",
    "python-dateutil>=2.8",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
pdf = ["weasyprint>=60.0"]
dev = ["pytest>=7.0"]

[project.scripts]
attendance-report = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-dir]
"" = "."
