[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "attendance-report"
version = "0.1.0"
description = "Attendance report converter"
requires-python = ">=3.11"

[project.scripts]
attendance-report = "main:main"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]